# gw_micro_service

./: .gitignore  .ycm_extra_conf.py  CMakeLists.boostbeast.txt.in  CMakeLists.cppmicroservices.txt.in  CMakeLists.cpprestsdk.txt.in  CMakeLists.libxml2.txt.in  CMakeLists.txt  CMakeLists.txt.orig  README.md  cppmicroservice.patch
cmake/: boostbeast.cmake  cppmicroservices.cmake  cpprestsdk.cmake  externals.cmake  googletest.cmake  libxml2.cmake  ngrest.cmake
include/: CMakeLists.txt
include/gw_micro_service/: CMakeLists.txt
include/gw_micro_service/dictionary_service/: Activator.h  CMakeLists.txt  DictionaryService.h  IDictionaryService.h
include/gw_micro_service/micro_service/: CMakeLists.txt  basic_controller.h  controller.h  interrupt_handler.h  micro_service_controller.h  network_utils.h  runtime_utils.h  std_micro_service.h
include/gw_micro_service/service_time/: CMakeLists.txt
include/gw_micro_service/service_time_consumer/: CMakeLists.txt
include/gw_micro_service/service_time_systemclock/: CMakeLists.txt
include/gw_micro_service/warscroll_collector/: warscroll_collector.h
lib/: CMakeLists.txt
lib/dictionary_service/: Activator.cpp  CMakeLists.txt  DictionaryService.cpp  IDictionaryService.cpp  manifest.json
lib/micro_service/: CMakeLists.txt  basic_controller.cpp  interrupt_handler.cpp  micro_service_controller.cpp  network_utils.cpp  runtime_utils.cpp
lib/service_time/: CMakeLists.txt  ServiceTime.cpp  ServiceTime.h
lib/service_time_consumer/: CMakeLists.txt  ServiceTimeConsumer.cpp
lib/service_time_systemclock/: CMakeLists.txt  ServiceTimeImpl.cpp
lib/warscroll_collector/: CMakeLists.txt  warscroll_collector.cpp
patches/: cppUservice.patch
scripts/: download_ngrest.sh
services/: CMakeLists.txt
services/calculator/: CMakeLists.txt
services/calculator/calculator/: CMakeLists.txt
services/calculator/calculator/src/: calculator.cpp  calculator.h
services/simple_example/: CMakeLists.txt  main.cpp
services/warscroll_collector/: CMakeLists.txt
services/warscroll_collector/.ngrest/: services
services/warscroll_collector/warscroll_collector/: CMakeLists.txt
services/warscroll_collector/warscroll_collector/src/: warscroll_collector.cpp  warscroll_collector.h
services/warscroll_collector_service/: CMakeLists.txt
services/warscroll_collector_service/.ngrest/: name
services/warscroll_collector_service/warscroll_collector_service/: CMakeLists.txt
services/warscroll_collector_service/warscroll_collector_service/src/: warscroll_collector_service.cpp  warscroll_collector_service.h
