cmake_minimum_required(VERSION 2.6)

project (calculator CXX)

set(CALCULATOR_HEADERS calculator.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(CALCULATOR_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(CALCULATOR_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${CALCULATOR_HEADERS})

CODEGEN_FILES(CALCULATOR_CODEGEN_SOURCES ${CALCULATOR_CODEGEN_DIR} ${CALCULATOR_HEADERS})

add_custom_command(OUTPUT ${CALCULATOR_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${CALCULATOR_CODEGEN_DIR} -t service ${CALCULATOR_HEADERS}
    DEPENDS ${CALCULATOR_HEADERS_PATHS}
)

file(GLOB CALCULATOR_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND CALCULATOR_SOURCES ${CALCULATOR_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR} $ENV{NGREST_EXT_INCLUDES})

add_library(calculator MODULE ${CALCULATOR_SOURCES})

set_target_properties(calculator PROPERTIES PREFIX "")
set_target_properties(calculator PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(calculator ngrestutils ngrestcommon ngrestjson ngrestengine $ENV{NGREST_EXT_LIBS})
